--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: Music notes
+title: MEOWSOME
 logo: /assets/img/music-notes.jpg
-description: Minimal is a theme for GitHub Pages.
-show_downloads: true
+description: One cat just leads to another.
+show_downloads: false
 google_analytics:
 theme: jekyll-theme-minimal
