--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: MEOWSOME
-logo: /assets/img/music-notes.jpg
+logo: /assets/img/cat-staring.jpg
 description: One cat just leads to another.
 show_downloads: false
 google_analytics:
